Version 4.5.0
-------------
- [PATCH] Update common @11.0.0
- [MINOR] Bumping YubiKit Versions to 2.2.0 (#1719)

Version 4.4.1
-------------
- [PATCH] V4.4.0 was incorrectly built with RC versions, need to increment to V4.4.1
- [PATCH] Update common@10.1.1

Version 4.3.0
-------------
- [PATCH] Update common@10.0.0

Version 4.2.4
-------------
- [PATCH] Update common@9.1.0

Version 4.2.3
-------------
- [PATCH] Update common@9.0.0

Version 4.2.2
-------------
- [PATCH] Update common@8.0.2

Version 4.2.1
-------------
- [PATCH] Update common@8.0.0

Version 4.2.0
-------------
- [PATCH] Update common@7.0.1
- [PATCH] Update androidx appcompat version from 1.0.2 -> 1.1.0 (#1691)
- [MINOR] Added keyboard flag to configChanges in Manifest for YubiKey compatibility. (#1699)

Version 4.1.0
-------------
- [PATCH] Update common@4.2.0
- [PATCH] Update gson version to 2.8.9 (#1680)
- [MINOR] Remove PKeyAuth support from ADAL (#1685)

Version 4.0.2
-------------
- [PATCH] Update common@4.0.2

Version 4.0.1
-------------
- [MINOR] Migrate BaseController to common4j (#1636)
- [MAJOR] Migrate Token Caches to Common4j (#1633)
- [MINOR] Adapt to migration of shared preferences. (#1624)
- [PATCH] Adds API23 WebViewClient#onReceivedError overload (#1580)
- [PATCH] Fixes for MFA setup using Authenticator app.(#1579)
- [MINOR] Changes to Broker Validation to allow setting whether to trust debug brokers (prod brokers are always trusted).
- [PATCH] Replaced deprecated PackageInfo.versionCode with PackageInfoCompat.getLongVersionCode(packageInfo) (#1584)
- [PATCH] Fixes deprecated PackageInfo.signatures (#1587)
- [PATCH] Deprecated ADAL namespaced AuthenticationSettings#setSecretKey(), #getSecretKey() (#1586)
- [PATCH] Disregard pageload errors for the non-primary frame during interactive auth (#1603)
- [PATCH] Updates Nimbus version 8.2 -> 9.9 (#1600)
- [PATCH] Fix for ADAL cache replication to Msal/Common-Cache (#1616)
- [PATCH] Updates to README File. 

Version 3.1.3
-------------